fix for prom detail slider txt align + color pt4

--- a/wp-content/themes/ideum/stylesheets/components/_content.scss
+++ b/wp-content/themes/ideum/stylesheets/components/_content.scss
@@ -288,7 +288,7 @@
   .one-column-text.slider { float:none !important; }
 
   .one-column-text.slider, .slider-two-column-text.slider {
-    background-color: $off-vv-light-gray:;
+    background-color: $off-vv-light-gray;
     margin: -0px auto 0;
     max-width: 80%;
     padding: 5% 0;
